--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.longcai.conveniencenet.activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:id="@+id/bnb_main"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentBottom="true" />
+
+    <View
+        android:id="@+id/line"
+        android:layout_above="@id/bnb_main"
+        style="@style/simpleline"/>
+
+    <FrameLayout
+        android:id="@+id/fl_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/line" />
 </RelativeLayout>
